@@ -1,3 +1,9 @@
+2005-01-12  Marc Singer  <elf@buici.com>
+
+	* Makefile (include/config.h): Fixed the script that generates the
+	configuration file.
+	(tidy): New target to remove debris.
+
 2004-12-05  Marc Singer  <elf@buici.com>
 
 	* src/lib/env.c (_env_check_magic): Magic number inserted at the
